Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="h6lkjgithubio" class="anchor" href="#h6lkjgithubio"><span class="octicon octicon-link"></span></a>h6lkj.github.io</h1>
+        <p>test on github</p>
       </section>
     </div>
 
